--- a/src/components/dialog/Dialog.scss
+++ b/src/components/dialog/Dialog.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   max-width: 100%;
+  max-height: 100%;
   margin: 0 auto;
   border-radius: $component-border-radius;
   background-color: $color-ui-white;
@@ -24,11 +25,11 @@
 
 .ax-dialog__header,
 .ax-dialog__footer {
-  flex: 0 0 auto;
+  flex: 0 1 auto;
 }
 
 .ax-dialog__body {
-  flex: 1 1 0%;
+  flex: 1 1 auto;
   overflow: auto;
 }
 
