--- a/src/components/modal/Modal.scss
+++ b/src/components/modal/Modal.scss
@@ -27,8 +27,8 @@ $modal-animation-duration: $transition-time-base;
   display: flex;
   flex-direction: column;
   max-width: 100%;
+  max-height: 100%;
   padding: $container-padding-sm;
-  overflow: auto;
 
   &:focus {
     outline: none;
